--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -28,7 +29,8 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*"
+    "@repo/eslint-config": "*",
+    "ts-jest": "^29.4.0"
   },
   "jest": {
     "moduleFileExtensions": [
