--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "lint": {
       "inputs": ["$TURBO_DEFAULT$", ".env*", "$PORT"]
@@ -17,8 +17,15 @@
       "cache": false,
       "persistent": true
     },
-    "test":{
-      
+    "test": {
+      "dependsOn": ["^build"],
+      "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.tsx", "test/**/*.ts"]
+    },
+    "e2e": {
+      "dependsOn": ["^build"],
+      "inputs": ["tests/**/*.ts"],
+      "outputs": ["playwright-report/**", "test-results/**"],
+      "passThroughEnv": ["PLAYWRIGHT_*"]
     }
   }
 }
