--- a/turbo.json
+++ b/turbo.json
@@ -1,11 +1,13 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+  "globalDependencies": [".env"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"],
+      "env": ["AUTH_SECRET"]
     },
     "lint": {
       "inputs": ["$TURBO_DEFAULT$", ".env*", "$PORT"]
@@ -15,17 +17,19 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "env": ["AUTH_SECRET"]
     },
     "test": {
       "dependsOn": ["^build"],
-      "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.tsx", "test/**/*.ts"]
+      "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.tsx", "test/**/*.ts"],
+      "env": ["AUTH_SECRET"]
     },
     "e2e": {
       "dependsOn": ["^build"],
       "inputs": ["tests/**/*.ts"],
       "outputs": ["playwright-report/**", "test-results/**"],
-      "passThroughEnv": ["PLAYWRIGHT_*"]
+      "passThroughEnv": ["PLAYWRIGHT_*", "AUTH_SECRET"]
     }
   }
 }
