--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,21 @@ jobs:
           node-version: '20' # Consistent with your project guide
           cache: 'yarn'      # Cache Yarn dependencies for faster installs
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache yarn dependencies
+        uses: actions/cache@v4
+        id: yarn-cache
+        with:
+          path: |
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            **/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install dependencies
         # Turborepo hoists dependencies to the root node_modules.
         # `yarn install` at the root will install all workspace dependencies.
@@ -52,3 +67,12 @@ jobs:
         # Use `turbo run test` to run the 'test' script in all workspaces that have it.
         # Ensure your test scripts are configured to run correctly.
         run: yarn turbo run test
+
+      - name: Upload coverage to Codecov (if applicable)
+        # Only run on pull requests to main
+        if: github.event_name == 'pull_request' && github.base_ref == 'main'
+        uses: codecov/codecov-action@v5
+        with:
+          file: ./coverage/lcov.info
+          flags: unittests
+          name: codecov-umbrella
