feat: add dummy environment variable to CI workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ jobs:
     # For CI, you might need dummy values or ensure your tests/builds
     # don't require live external services.
     env:
+      DUMMY_ENV: test
       # Example: uncomment and replace with actual secrets if needed for build/test
       # NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
       # AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
